--- a/app/Dockerfile.template
+++ b/app/Dockerfile.template
@@ -1,26 +1,13 @@
 ARG NODE_VERSION=12.6.0
 
-FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-node:${NODE_VERSION}-buster-run
+FROM balenalib/%%BALENA_MACHINE_NAME%%-alpine-node:${NODE_VERSION}-build
 
 ARG BALENA_CLI_VERSION=12.33.0
 
 # set the SHELL option -o pipefail before RUN with a pipe in
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# set debconf to run non-interactively
-ENV DEBIAN_FRONTEND noninteractive
-
-RUN install_packages \
-    apt-transport-https \
-    build-essential \
-    ca-certificates \
-    curl \
-    git \
-    python \
-    wget
-
-# use the official docker-ce installer that only supports up to buster for now
-RUN curl -fsSL https://get.docker.com | bash
+RUN apk add --update docker ca-certificates 
 
 # overlay2 requires a docker volume for graph
 VOLUME /var/lib/docker
