Build balena-cli base image separately from preload steps
The first two stages of the Dockerfile, up to FROM balena-cli,
can be used as an example to build an alpine container with
the cli and docker installed.

Everything following FROM balena-cli is specific to this preload
application.

Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,21 @@ version: "2"
 volumes:
   images:
   config:
+  docker:
 
 services:
   app:
     build: app
+    restart: no
     privileged: true
     volumes:
       - images:/images
       - config:/root/.balena
+      - docker:/var/lib/docker
+    tmpfs:
+      - /tmp
+      - /var/run
+      - /var/log
   web:
     build: web
     ports:
