--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ volumes:
 services:
   app:
     build: app
-    restart: no
+    # restart: no
     privileged: true
     volumes:
       - images:/images
@@ -18,6 +18,7 @@ services:
       - /tmp
       - /var/run
       - /var/log
+      # - /var/lib/docker
   web:
     build: web
     ports:
