Remove package-lock and update CLI version
Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
     "name": "balena-cli-docker",
     "private": true,
     "dependencies": {
-        "balena-cli": "^12.46.2"
+        "balena-cli": "12.48.12"
     }
 }
