--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ volumes:
   docker:
 
 services:
-  app:
-    build: app
+  preloader:
+    build: .
     privileged: true
     volumes:
       - images:/images
@@ -17,7 +17,7 @@ services:
       - /tmp
       - /var/run
       - /var/log
-    cpu_shares: 896
+    cpu_shares: 768
   web:
     build: web
     ports:
